--- a/buszy/manifest.json
+++ b/buszy/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Buszy",
   "short_name": "Buszy",
-  "start_url": "./settings.html",
+  "start_url": "./buszy.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#007bff",
