--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
   "name": "Buszy",
   "short_name": "Buszy",
-  "start_url": "../buszy.html",
+  "start_url": "buszy.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#007bff",
   "icons": [
     {
-      "src": "assets/icon-192.png",
+      "src": "buszy/assets/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "assets/icon-512.png",
+      "src": "buszy/assets/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
