--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Buszy",
-  "short_name": "Buszy",
+  "name": "",
+  "short_name": "",
   "start_url": "buszy.html",
   "display": "standalone",
   "background_color": "#ffffff",
